Changing the CSS for the navbar and footer for a cleaner look.

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,8 @@
 .navbar {
   background-color: rgb(30, 30, 97);
   text-align: center;
-  border-radius: 50px 50px 50px 50px;
   box-shadow: 0 0 15px 4px;
-  margin: 2%;
-  margin-top: 20px;
+  margin-bottom: 2%;
 }
 
 .nav-item {
@@ -122,9 +120,8 @@ h2.education, h2.experience {
   background-color: rgb(30, 30, 97);
   text-align: center;
   padding: 5px;
-  border-radius: 50px 50px 50px 50px;
   box-shadow: 0 0 15px 4px;
-  margin: 2%;
+  margin-top: 2%;
 }
 
 .footer p, a, a:hover {
