Added new version of resume. Updated brand statement to be shorter and better. Updated home pages so contact info just has the email, linkedin, and github.

--- a/src/App.css
+++ b/src/App.css
@@ -16,16 +16,11 @@ body {
 }
 
 .container {
-  border: 6px;
-  border-width: 100%;
-  border-color: rgb(30, 30, 97); 
-  border-style: solid;
-  border-radius: 30px 30px 30px 30px;
   box-shadow: 0 0 15px 2px;
   background-color: white;
 }
 
-.home, .sidenavigation, .AboutMe, .resume, .app {
+.home, .sidenavigation, .AboutMe, .app {
   Padding: 20px;
 }
 
@@ -39,6 +34,7 @@ body {
 
 #SideNav {
   border-left: black 2px solid;
+  min-height: 425px;
 }
 
 .home h1 {
@@ -78,16 +74,14 @@ h2.bold {
   font-size: 28px;
 }
 
-h2.resumetitle {
-  font-size: 15px;
-  font-weight: bold;
+.resume {
+  padding: 40px;
   text-align: center;
-  padding: 5px;
 }
 
-h2.education, h2.experience {
-  font-size: 15px;
-  font-weight: bold;
+.resumeDoc {
+  width: 80%;
+  height: 1675px;
 }
 
 #docicon {
@@ -95,11 +89,6 @@ h2.education, h2.experience {
   display: block;
   margin-left: auto;
   margin-right: auto;
-}
-
-.resume h1 {
-  text-align: center;
-  font-size: 45px;
 }
 
 .black {
